# esp32-s3-ssh-keyboard

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  esp32-wifi-keyboard.c  idf_component.yml  provisioned-keyboard.c  ssh-keyboard-simple.c  ssh-keyboard.c  wifi-prov-keyboard.c
